# Photo-Storage-Manager

./: .gitignore  .gitmodules  README.md  build.gradle.kts  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_defs.html  globals_func.html  gradle.properties  graph_legend.html  index.html  index.js  log__utils_8h.html  log__utils_8h.js  log__utils_8h__dep__incl.map  log__utils_8h__dep__incl.md5  log__utils_8h__incl.map  log__utils_8h__incl.md5  log__utils_8h_source.html  mainpage_8md.html  menudata.js  native__emulator__checker_8cpp.html  native__emulator__checker_8cpp.js  native__emulator__checker_8cpp__incl.map  native__emulator__checker_8cpp__incl.md5  native__emulator__checker_8cpp_a9bde658328dc0cb2e65136c53253e31e_icgraph.map  native__emulator__checker_8cpp_a9bde658328dc0cb2e65136c53253e31e_icgraph.md5  native__emulator__checker_8cpp_ab9957ccb5a722253c5bc684837e04350_icgraph.map  native__emulator__checker_8cpp_ab9957ccb5a722253c5bc684837e04350_icgraph.md5  native__emulator__checker_8cpp_ad7da94a64eddcdb41600d1d2fda881d5_icgraph.map  native__emulator__checker_8cpp_ad7da94a64eddcdb41600d1d2fda881d5_icgraph.md5  native__emulator__checker_8cpp_afe9d2ad0cfc241c1f5f673d35f1a4a0a_icgraph.map  native__emulator__checker_8cpp_afe9d2ad0cfc241c1f5f673d35f1a4a0a_icgraph.md5  (+70 more)
app/src/main/cpp/: CMakeLists.txt  Doxyfile  mainpage.md  root_checker.cpp
app/src/main/cpp/include/: log_utils.h  (+4 more)
(+147 files in other folders)
